# v0promptsgenie

./: .gitignore  CLAUDE.md  README.md  WORKING_CONFIG_DO_NOT_MODIFY.md  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  run-migrations.js  verify-database.js
.claude/: settings.local.json
.github/workflows/: build-desktop.yml
app/: globals.css  layout.tsx  page.tsx
app/app-tracker/: page.tsx
app/image-analyzer/: page.tsx  page.tsx.disabled
app/image-studio/: CLAUDE.md  EXPORT_FIX_REFERENCE.json  EXPORT_FIX_REFERENCE.md  HISTORY_CLEANUP.md  page.tsx  types.ts
components/: animated-grid.tsx  floating-particles.tsx  gl.tsx  hero.tsx  history-grid.tsx  particle-wave.tsx  pill.tsx
desktop/: README.md
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
docs/: CSS_CUSTOM_PROPERTY_FIX_REFERENCE.md
lib/: GEMINI.md  background-removal.ts  bg-removal-ai.ts  bg-removal-methods.ts  bg-removal-utils.ts  cloud-bg-removal.ts  font-loader.ts  gemini-api-key.ts  gemini-client.WORKING_BACKUP.ts  gemini-client.ts  gemini-helper.ts  history.ts  openai-image-client.ts  photoroom-bg-removal.ts  pixelcut-bg-removal.ts  replicate-bg-removal.ts  replicate-upscaler.ts  smart-bg-removal.ts  smart-bg-utils.ts  user-id.ts  vectorization.ts
scripts/: 002-update-ai-helper-history.sql  004_create_neon_favorites_table.sql  005_create_neon_history_table.sql  006_create_logo_history_table.sql  007_add_config_to_logo_history.sql  fix-css-custom-properties.js
styles/: globals.css
(+487 files in other folders)
