[package]
name = "v0-prompts-genie-desktop"
version = "0.1.0"
description = "V0 Prompts Genie desktop app"
edition = "2021"

[lib]
name = "v0_prompts_genie_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
